# tausik-core

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CHANGELOG.ru.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  QWEN.md  README.md  README.ru.md  SECURITY.md  TODO.md  pyproject.toml  requirements.txt  skills.example.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs-update.yml  security-review.yml  test-coverage.yml  tests.yml
.qwen/: settings.json
.qwen/docs/: README.md
.qwen/references/: skill-catalog.md
.qwen/scripts/: audit_orphan_files.py  audit_pytest_dedupe.py  audit_stale_docs.py  audit_unused_python.py  backend_crud.py  backend_schema.py  brain_cli_ops.py  brain_config.py  brain_mcp_write.py  gate_runner.py  mcp_tool_counts.py  project_cli.py  project_cli_doctor.py  project_cli_ops.py  project_parser_ops.py  service_ac_evidence.py  service_task.py  service_verification.py  skill_profile.py  skill_repos.py  tausik_utils.py  verify_recent_lookup.py
bootstrap/: analyzer.py  bootstrap.py  bootstrap_catalog.py  bootstrap_check.py  bootstrap_config.py  bootstrap_copy.py  bootstrap_generate.py  bootstrap_hooks.py  bootstrap_kilo.py  bootstrap_modes.py  bootstrap_opencode.py  bootstrap_opencode_assets.py  bootstrap_paths.py  bootstrap_qwen.py  bootstrap_skill_helpers.py  bootstrap_stacks.py  bootstrap_templates.py  bootstrap_vendor.py  bootstrap_vendor_integrity.py  bootstrap_venv.py  generator.py  tausik_wrapper.cmd  tausik_wrapper.sh
docs/: README.md
docs/_generated/: constants.json
docs/audit/: audit-report-2026-05-18.md
docs/en/: adding-new-ide.md  architecture.md  brain-db-schema.md  cli.md  config-trust-tiers.md  configuration.md  cost-telemetry.md  dev-doc-checks.md  doctor.md  environment.md  hooks.md  i18n-strategy.md  kilo-zai.md  mcp.md  memory-merge-guidelines.md  model-providers.md  no-sdk-verify.md  quickstart.md  reasoning-trace.md  receipts.md  security.md  senar-compliance-matrix.md  senar.md  session-active-time.md  shared-brain.md  skill-ecosystem.md  skill-profiles.md  skill-spec.md  skills.md  troubleshooting.md  upgrade.md  vendor-skills.md  zero-defect.md
docs/research/: 2026-06-12-sortula-ai-bookmarks-taucode-strategy.md
docs/ru/: adding-new-ide.md  agent-contract.md  architecture.md  claude-md-guide.md  cli.md  config-trust-tiers.md  configuration.md  cost-telemetry.md  dev-doc-checks.md  doctor.md  environment.md  hooks-events.md  hooks.md  i18n-strategy.md  kilo-zai.md  mcp.md  memory-merge-guidelines.md  model-providers.md  no-sdk-verify.md  quickstart.md  reasoning-trace.md  receipts.md  security.md  senar-compliance-matrix.md  senar.md  session-active-time.md  shared-brain.md  skill-ecosystem.md  skill-profiles.md  skill-spec.md  skills.md  stacks.md  troubleshooting.md  upgrade.md  vendor-skills.md  zero-defect.md
harness/schemas/: brain-artifact-card.schema.json
references/: QUICKSTART.en.md  QUICKSTART.md  architecture.en.md  architecture.md  brain-db-schema.md  project-cli.md
references/meta/: skill-patterns.md  troubleshooting.md
renar/: README.md  conformance.md
renar/adapts/: adapt-renar-adoption.md
renar/specs/: renar-adoption.md
scripts/: README.md  audit_orphan_files.py  audit_stale_docs.py  audit_tracked_files.py  audit_translation_drift.py  audit_unused_python.py  backend_crud.py  backend_crud_reasoning.py  backend_defect_escape.py  backend_init.py  backend_migrations.py  backend_migrations_legacy.py  backend_migrations_parity.py  backend_migrations_postseed.py  backend_migrations_v34.py  backend_migrations_v38.py  backend_migrations_v39.py  backend_migrations_v40.py  backend_migrations_v41.py  backend_queries.py  backend_queries_fts.py  backend_queries_metrics.py  backend_queries_usage.py  backend_schema.py  backend_schema_gate_runs.py  brain_artifact_card.py  brain_classifier.py  brain_cli_ops.py  brain_config.py  brain_init.py  brain_mcp_read.py  brain_mcp_write.py  brain_notion_client.py  brain_project_registry.py  brain_publish_flow.py  brain_runtime.py  brain_schema.py  brain_scrubbing.py  brain_snippet_detect.py  brain_sync.py  (+118 more)
scripts/hooks/: _common.py  auto_format.py  bash_firewall.py  bash_write_gate.py  bash_write_parse.py  brain_search_proactive.py  check_docs.py  git_push_gate.py  hook_supervision.py  keyword_detector.py  memory_markers.py  memory_pretool_block.py  notify_on_done.py  scope_write_gate.py  secret_scan.py  session_cleanup_check.py  session_metrics.py  session_start.py  task_cost_budget_check.py  task_done_verify.py  task_gate.py  token_metrics.py  token_rows.py  user_prompt_submit.py
scripts/providers/: base.py
site/: README.md  brief.md  index.md  nginx.conf  package.json  pnpm-lock.yaml
site/.vitepress/: config.ts
site/_archive/: landing-snapshot.html
site/ru/: index.md
site/scripts/: sync-docs.mjs
stacks/flutter/: stack.json
tests/: conftest.py  test_ac_evidence.py  test_ac_evidence_json.py  test_ac_parser_inline.py  test_adapts.py  test_adversarial_review_mode.py  test_agent_units.py  test_agent_units_cli.py  test_agent_units_recording.py  test_aidd_autogen.py  test_aidd_scaffold.py  test_aidd_validate.py  test_audit_orphan_files.py  test_audit_pytest_dedupe.py  test_audit_research_dump.py  test_audit_stale_docs.py  test_audit_tracked_files.py  test_audit_translation_drift.py  test_audit_unused_python.py  test_audit_vendor_usage.py  test_backend_session_metrics.py  test_bash_write_gate_hook.py  test_ble001_enforced.py  test_block_message_quality.py  test_bootstrap_aidd.py  test_bootstrap_check.py  test_bootstrap_drift_gate.py  test_bootstrap_dryrun.py  test_bootstrap_extension_skills.py  test_bootstrap_frontmatter.py  test_bootstrap_generate.py  test_bootstrap_generate_mcp.py  test_bootstrap_hooks_parity.py  test_bootstrap_kilo.py  test_bootstrap_model_profile.py  test_bootstrap_non_destructive.py  test_bootstrap_overrides.py  test_bootstrap_paths.py  test_bootstrap_qwen.py  test_bootstrap_real.py  (+276 more)
(+130 files in other folders)
